[package]
name = "fare_estimation"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "fare"
harness = false
